--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 								<ul>
 									<li><a href="unem.html">UNEM </a></li>
 									<li><a href="unhrc.html">UNHRC</a></li>
-									<li><a href="aippm.html">All India Political Parties Meet</a></li>
-									<li><a href="fcc.html">Futuristic Crisis Committee</a></li>
-									<li><a href="ipc.html">International Press Corps</a></li>
+									<li><a href="aippm.html">AIPPM</a></li>
+									<li><a href="fcc.html">FCC</a></li>
+									<li><a href="ipc.html">IPC</a></li>
 								</ul>
 							</li>
 							<li><a href="eb.html">Secretariat</a></li>
