--- a/unhrc.html
+++ b/unhrc.html
@@ -64,7 +64,7 @@
 					<p style="font-size: 1.25em">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
-					<p style="font-size: 1.%;">
+					<p style="font-size: 1.25em;">
 						<b>-Bernard Baruch.</b>
 					</p>
 					<p style="font-size: 1em">
