--- a/unhrc.html
+++ b/unhrc.html
@@ -50,6 +50,7 @@
             </header>
 
 			<!-- Main -->
+			<div style = "font: perpetua">
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
@@ -134,6 +135,7 @@
 							</a>
 
 						</article>
+			</div>
 			<!-- Footer -->
             <footer id="footer">
                 <ul class="icons">
