--- a/aippm.html
+++ b/aippm.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html></html>
 	<head>
 		<title>RNPSMUN 2022-AIPPM</title>
 		<meta charset="utf-8" />
@@ -50,7 +50,7 @@
             </header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
+				<div style="font-family: perpetua;" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
 						<span class="image"><img src="./images/comlog/aippm.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;"/></span>
@@ -94,10 +94,10 @@ originating in China.
 					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+								<img src="./images/avatar.png" style="height : 15em; width: 15em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">CHAIR</h1>
-									<p style = "color:white" >Prajwal R</p> 
+									<h1 style="font: 1em perpetua;  color:white">CHAIR</h1>
+									<p style = "font: 2em perpetua; color:white" >Prajwal R</p> 
 								</p>
 							</div>
 						</a>
@@ -106,11 +106,11 @@ originating in China.
 					<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
+									<img src="./images/avatar.png" style="height : 15em; width: 15em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">VICE - CHAIR</h1>
+										<h1 style="font: 1em perpetua;  color:white">VICE - CHAIR</h1>
 
-										<p style = "color:white">Ananthashreyas Nair</p>
+										<p style = "font: 2em perpetua; color:white">Ananthashreyas Nair</p>
 
 									</p>
 								</div>
@@ -121,11 +121,11 @@ originating in China.
 						<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
+									<img src="./images/avatar.png" style="height : 15em; width: 15em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">MODERATOR</h1>
+										<h1 style="font: 1em perpetua;  color:white">MODERATOR</h1>
 
-										<p style = "color:white">Yashaswini Sirwar</p> 
+										<p style = "font: 2em perpetua; color:white">Yashaswini Sirwar</p> 
 
 									</p>
 								</div>
