--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
 				</header>
 
 			<!-- Banner -->
+			<div style="font-family: perpetua;">
 				<section id="banner">
 					<div class="content">
 						<!-- <header>
@@ -232,15 +233,15 @@
 						</header> -->
 						<center>
 							<span class="image"><img src="logo.png" alt=""/></span><br><br>
-							<div class="col-4 col-12-large">
+							<div style="font-family: perpetua;" class="col-4 col-12-large">
 								<strong><p style="font-size: 36px;">FUTURUM EST MANIBUS</p></strong>
 							</div>
-							<p style="font-size: 24px;">
+							<p style="font-family: perpetua; font-size: 24px;">
 								<strong>4<sup>th</sup>,  5<sup>th</sup> &  6<sup>th</sup>								
 									<br>August 2022</strong></p>
 							</p>
 						</center>
-						<p> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. Capable of both inflicting injury, and remedying it. <br> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; - Albus Dumbledore</b></p>
+						<p style="font-family: perpetua;"> <b> Words are, in my not-so-humble opinion, our most inexhaustible source of magic. Capable of both inflicting injury, and remedying it. <br> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp; - Albus Dumbledore</b></p>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
@@ -509,6 +510,7 @@
 						</tr></tbody></table>
 					</div>
 				</section>
+			</div>
 
 			<!-- Footer -->
 			<footer id="footer">
