--- a/ipc.html
+++ b/ipc.html
@@ -50,7 +50,7 @@
             </header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
+				<div style="font-family: perpetua;" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
 						<span class="image"><img src="./images/comlog/ipc.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;"/></span>
@@ -86,10 +86,10 @@
 <article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+								<img src="./images/avatar.png" style="height : 15em; width: 15em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">HEAD OF PRESS</h1>
-									<p style = "color:white">Abhishekh S</p> 
+									<h1 style="font: 1em perpetua;;  color:white">HEAD OF PRESS</h1>
+									<p style = "font: 2em perpetua;; color:white">Abhishekh S</p> 
 								</p>
 							</div>
 						</a>
@@ -99,10 +99,10 @@
 						<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+								<img src="./images/avatar.png" style="height : 15em; width: 15em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">EDITOR IN CHIEF </h1>
-									<p style = "color:white">Keerthi Girish</p>  
+									<h1 style="font: 1em perpetua;  color:white">EDITOR-IN-CHIEF </h1>
+									<p style = "font: 2em perpetua; color:white">Keerthi Girish</p>  
 								</p>
 							</div>
 						</a>
@@ -111,10 +111,10 @@
 		<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+								<img src="./images/avatar.png" style="height : 15em; width: 15em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">SECRETARY OF PRESS</h1>
-									<p style = "color:white">Yati Patil</p> 
+									<h1 style="font: 1em perpetua;  color:white">SECRETARY OF PRESS</h1>
+									<p style = "font: 2em perpetua; color:white">Yati Patil</p> 
 								</p>
 							</div>
 						</a>
