--- a/unem.html
+++ b/unem.html
@@ -50,7 +50,7 @@
             </header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
+				<div style="font-family: perpetua;" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
 						<span class="image"><img src="./images/comlog/unem.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;"/></span>
@@ -93,8 +93,8 @@ Can the world community stop the conflict before it leads to World War III? What
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-									<p style = "color:white">Vishal Maski</p> 
+									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
+									<p style = "font: 2em perpetua; color:white">Vishal Maski</p> 
 								</p>
 							</div>
 						</a>
@@ -106,9 +106,9 @@ Can the world community stop the conflict before it leads to World War III? What
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
+									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 
-									<p style = " color:white">Rishabh Shetty</p> 
+									<p style = "font: 2em perpetua; color:white">Rishabh Shetty</p> 
 
 								</p>
 							</div>
@@ -121,8 +121,8 @@ Can the world community stop the conflict before it leads to World War III? What
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">MODERATOR</h1>
-									<p style = "color:white">Maanya H</p> 
+									<h1 style="font: 1em perpetua;;  color:white">MODERATOR</h1>
+									<p style = "font: 2em perpetua; color:white">Maanya H</p> 
 								</p>
 							</div>
 						</a>
