--- a/unhrc.html
+++ b/unhrc.html
@@ -50,7 +50,7 @@
             </header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
+				<div style="font-family:perpetua" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
 						<span class="image"><img src="./images/comlog/unhrc.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;"/></span>
@@ -90,8 +90,8 @@
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-									<p style="color: white;">Jatin Jain</p> 
+									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
+									<p style="font: 2em perpetua; color: white;">Jatin Jain</p> 
 								</p>
 							</div>
 						</a>
@@ -102,8 +102,8 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p style="color: white;">Diya Madhu</p> 
+										<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
+										<p style="font: 2em perpetua; color: white;">Diya Madhu</p> 
 									</p>
 								</div>
 							</a>
@@ -115,8 +115,8 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p style="color: white;">Anvesha Girish</p> 
+										<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
+										<p style="font: 2em perpetua; color: white;">Anvesha Girish</p> 
 									</p>
 								</div>
 							</a>
@@ -127,8 +127,8 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - CHAIR</h1>
-										<p style="color: white;">Muktha</p> 
+										<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
+										<p style="font: 2em perpetua; color: white;">Muktha</p> 
 									</p>
 								</div>
 							</a>
