--- a/fcc.html
+++ b/fcc.html
@@ -50,7 +50,7 @@
             </header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
+				<div style="font-family: perpetua;" id="main" class="wrapper style1">
 					<div class="container">
 						<div style="text-align: center;">
 						<span class="image"><img src="./images/comlog/fcc.jpg" alt="" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;"/></span>
@@ -60,14 +60,14 @@
 						<!-- Content -->
 							<section id="content">
 								<div style="text-align: center;">
-									<h2>Futuristic Crisis Committee</h2>
-					<p style="font-size: 1.25em">
+									<h2 style="font: perpetua">Futuristic Crisis Committee</h2>
+					<p style="font: 1.25em perpetua">
 						<b>“If the history of the last fifty years teaches us anything, it is that peace does not follow disarmament - disarmament follows peace”</b>
 					</p>
-					<p style="font-size: 1.25em;">
+					<p style="font: 1.25em perpetua;">
 						<b>-Bernard Baruch.</b>
 					</p>
-					<p style="font-size: 1em">
+					<p style="font: 1em perpetua">
 						A committee consisting of the most substantial powers in the past decade come together in 2035 to address the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need to put aside their post-war differences after a decade of global political unrest, will the countries find the strength to unite when faced with the consequences of the dark side of science, privatization of government and the growing influence of private individuals on politics?
 					</p>
 					<header class="major">
@@ -91,8 +91,8 @@
 							<div style="border-radius: 100%; text-align: center; size: 50%">
 								<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 								<p>
-									<h1 style="font: 1em sans-serif;  color:white">CHAIR</h1>
-									<p style = "color:white" >Neha Hemadri</p> 
+									<h1 style="font: 1em perpetua;  color:white">CHAIR</h1>
+									<p style = "font: 2em perpetua; color:white" >Neha Hemadri</p> 
 								</p>
 							</div>
 						</a>
@@ -103,8 +103,8 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - VICE CHAIR</h1>
-										<p style = "color:white">Smrithi Shenoy</p> 
+										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
+										<p style = "font: 2em perpetua; color:white">Smrithi Shenoy</p> 
 									</p>
 								</div>
 							</a>
@@ -116,8 +116,8 @@
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
 									<img src="./images/avatar.png" style="height : 11em; width: 11em; right: 50%; border-radius: 50%;">
 									<p>
-										<h1 style="font: 1em sans-serif;  color:white">CO - VICE CHAIR</h1>
-										<p style = "color:white">Nikhil Atreya</p> 
+										<h1 style="font: 1em perpetua; color:white">CO - VICE CHAIR</h1>
+										<p style = "font: 2em perpetua; color:white">Nikhil Atreya</p> 
 									</p>
 								</div>
 							</a>
