--- a/eb.html
+++ b/eb.html
@@ -50,7 +50,7 @@
             </header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
+				<div id="main" class="wrapper style1" style="font-family: perpetua;">
 					<div class="container">
 						<header class="major">
 							<center><a href="#" class="image fit"><img src="logo.png" style="border-radius: 50%; width: 20em; height: 20em; border: 2px solid gold !important;" alt=""/></a></center>
@@ -58,13 +58,14 @@
 						</header>
 
 						<!-- Content -->
+						<div style="font-family: perpetua;">
 							<section id="content">
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -76,7 +77,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -88,7 +89,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -100,7 +101,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -112,7 +113,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -124,7 +125,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -136,7 +137,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -148,7 +149,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -160,7 +161,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<h1 style="font: 1em;  color:white">POSITION</h1>
 												<p>NAME HERE</p> 
 											</p>
 										</div>
@@ -171,6 +172,7 @@
 							</section>
 
 					</div>
+				</div>
 				</div>
 
 			<!-- Footer -->
