--- a/aippm.html
+++ b/aippm.html
@@ -106,7 +106,7 @@ originating in China.
 					<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/ananth.png" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/ananth.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">VICE - CHAIR</h1>
 
