--- a/aippm.html
+++ b/aippm.html
@@ -121,7 +121,7 @@ originating in China.
 						<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/yash.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/yash2.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">MODERATOR</h1>
 
