--- a/unhrc.html
+++ b/unhrc.html
@@ -100,7 +100,7 @@
 					<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/avatar.png" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/diya.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 										<p style="font: 2em perpetua; color: white;">Diya Madhu</p> 
@@ -113,7 +113,7 @@
 						<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/avatar.png" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/she.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 										<p style="font: 2em perpetua; color: white;">Anvesha Girish</p> 
@@ -125,7 +125,7 @@
 						<article>
 							<a >
 								<div style="border-radius: 100%; text-align: center ; size: 50%">
-									<img src="./images/avatar.png" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
+									<img src="./images/muktha.jpeg" style="height : 14em; width: 14em; right: 50%; border-radius: 50%;">
 									<p>
 										<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 										<p style="font: 2em perpetua; color: white;">Muktha</p> 
