--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		  -webkit-animation-duration: 0.4s;
 		  animation-name: animatetop;
 		  animation-duration: 0.4s;
-		  color: rgba(25, 25, 112);
+		  color: white;
 		  
 		}
 		
