--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		
 		.modal-content {
 		  position: relative;
-		  background-image: linear-gradient(to right, rgba(150, 192, 209, 1), rgba(121, 180, 214, 1));
+		  background-image: linear-gradient(to right, rgb(12, 0, 81, 1), rgb(0, 0, 0, 1));
 		  margin: auto;
 		  padding: 0;
 		  border: 1px solid #888;
@@ -105,7 +105,7 @@
 		
 		.modal-header {
 		  padding: 2px 16px;
-		  background-image: linear-gradient(to right, rgb(35, 92, 192, 1), rgb(37, 43, 87, 1));
+		  background-image: linear-gradient(to right, rgb(9, 50, 122, 1), rgb(37, 43, 87, 1));
 		  color: white;
 		}
 		
@@ -113,7 +113,7 @@
 		
 		.modal-footer {
 		  padding: 2px 16px;
-		  background-image: linear-gradient(to right, rgb(35, 92, 192, 1), rgb(37, 43, 87, 1));
+		  background-image: linear-gradient(to right, rgb(9, 50, 122), rgb(37, 43, 87, 1));
 		  color: white;
 		}
 		.tablecontainer th h1 {
