--- a/ipc.html
+++ b/ipc.html
@@ -86,7 +86,7 @@
 <article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/abhishek.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;;  color:white">HEAD OF PRESS</h1>
 									<p style = "font: 2em perpetua;; color:white">Abhishekh S</p> 
@@ -99,7 +99,7 @@
 						<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/keerthi.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">EDITOR-IN-CHIEF </h1>
 									<p style = "font: 2em perpetua; color:white">Keerthi Girish</p>  
@@ -111,7 +111,7 @@
 		<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/yati.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">SECRETARY OF PRESS</h1>
 									<p style = "font: 2em perpetua; color:white">Yati Patil</p> 
