--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
 		  text-decoration: none;
 		  cursor: pointer;
 		}
+		.close2 {
+		  color: white;
+		  float: right;
+		  font-size: 28px;
+		  font-weight: bold;
+		}
+		
+		.close2:hover,
+		.close2:focus {
+		  color: #000;
+		  text-decoration: none;
+		  cursor: pointer;
+		}
 		
 		.modal-header {
 		  padding: 2px 16px;
