--- a/unhrc.html
+++ b/unhrc.html
@@ -88,7 +88,7 @@
 					<article >
 						<a >
 							<div style="border-radius: 100%; text-align: center; size: 50%">
-								<img src="./images/avatar.png" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
+								<img src="./images/jatin.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 									<p style="font: 2em perpetua; color: white;">Jatin Jain</p> 
