--- a/eb.html
+++ b/eb.html
@@ -65,8 +65,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
+												<p>Dhruti p> 
 											</p>
 										</div>
 									</a>
@@ -77,8 +77,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
+												<p>Dhruti Deshpande</p> 
 											</p>
 										</div>
 									</a>
@@ -89,8 +89,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+											<h1 style="font: 1em;  color:white">CRISIS DIRECTOR</h1>
+											<p>Vishal Maski</p>
 											</p>
 										</div>
 									</a>
