--- a/eb.html
+++ b/eb.html
@@ -66,7 +66,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
-												<p>Dhruti p> 
+												<p>Dhruti Deshpande</p> 
 											</p>
 										</div>
 									</a>
@@ -78,7 +78,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
-												<p>Dhruti Deshpande</p> 
+												<p>Vishal A Rao</p> 
 											</p>
 										</div>
 									</a>
