--- a/eb.html
+++ b/eb.html
@@ -63,7 +63,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/dhruthiD.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
 												<p>Dhruti Deshpande</p> 
@@ -75,7 +75,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/VishalRao" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
 												<p>Vishal A Rao</p> 
@@ -87,7 +87,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/maski.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">CRISIS DIRECTOR</h1>
 											<p>Vishal Maski</p>
