--- a/eb.html
+++ b/eb.html
@@ -66,7 +66,7 @@
 											<img src="./images/dhruthiD.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
-												<p>Dhruti Deshpande</p> 
+												<p style = "font : 2em; color: white;">Dhruti Deshpande</p> 
 											</p>
 										</div>
 									</a>
@@ -78,7 +78,7 @@
 											<img src="./images/VishalRao" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
-												<p>Vishal A Rao</p> 
+												<p sytle = "font : 2em; color: white;">Vishal A Rao</p> 
 											</p>
 										</div>
 									</a>
@@ -90,7 +90,7 @@
 											<img src="./images/maski.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">CRISIS DIRECTOR</h1>
-											<p>Vishal Maski</p>
+											<p sytle = "font : 2em; color: white;">Vishal Maski</p>
 											</p>
 										</div>
 									</a>
@@ -102,7 +102,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<p sytle = "font : 2em; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -114,7 +114,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<p sytle = "font : 2em; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -126,7 +126,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<p sytle = "font : 2em; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -138,7 +138,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<p sytle = "font : 2em; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -150,7 +150,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<p sytle = "font : 2em; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -162,7 +162,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<p sytle = "font : 2em; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
