--- a/eb.html
+++ b/eb.html
@@ -75,7 +75,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/VishalRao" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/VishalRao.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
 												<p sytle = "font : 2em; color: white;">Vishal A Rao</p> 
