--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 								</ul>
 							</li>
 							<li><a href="eb.html">Secretariat</a></li>
+							<li><a href="credits.html">Credits</a></li>
 							<li><a href="#">Delegate Handbook</a></li>
 							<li><a href="#">Background Guides</a></li>
 							<li><a href="#">Matrix</a></li>
@@ -286,7 +287,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Secretary General of RNPSMUN 2022</h2>
-						<img src="images/dhruthiD.jpeg" style="border-radius: 50%; height: 20em; width: 20em;" alt="" /><p>Presenting to you, Dhruti Deshpande!</p><br>
+						<img src="images/dhruthiD.jpeg" style="border-radius: 50%; height: 20em; width: 20em;" alt="" /><p style="font-size: 1.5em;">Presenting to you, Dhruti Deshpande!</p><br>
 					</header>
 					
 					<footer class="major">
@@ -322,7 +323,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>Director General of RNPSMUN 2022</h2>
-						<img src="images/VishalRao.jpeg" style="border-radius: 50%; height: 20em; width: 20em; " alt="" /><p>Presenting to you, Vishal Rao!</p><br>
+						<img src="images/VishalRao.jpeg" style="border-radius: 50%; height: 20em; width: 20em; " alt="" /><p style="font-size: 1.5em;">Presenting to you, Vishal Rao!</p><br>
 					</header>
 					
 					<footer class="major">
