--- a/aippm.html
+++ b/aippm.html
@@ -4,9 +4,10 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html></html>
+<html>
 	<head>
 		<title>RNPSMUN 2022-AIPPM</title>
+		<link rel="icon" type="image/x-icon" href="./images/comlog/aippm.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
