--- a/credits.html
+++ b/credits.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>RNPSMUN 2022</title>
+		<link rel="icon" type="image/x-icon" href="logo.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -50,6 +51,7 @@
             </header>
 
 			<!-- Main -->
+			<div style="font-family: perpetua;">
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
@@ -127,6 +129,7 @@
 
 					</div>
 				</div>
+		</div>
 
 			<!-- Footer -->
 			<footer id="footer">
