--- a/fcc.html
+++ b/fcc.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022</title>
+		<title>RNPSMUN 2022-FCC</title>
+		<link rel="icon" type="image/x-icon" href="./images/comlog/fcc.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
