--- a/unem.html
+++ b/unem.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>RNPSMUN 2022-UNEM</title>
+		<link rel="icon" type="image/x-icon" href="./images/comlog/unem.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
