--- a/eb.html
+++ b/eb.html
@@ -66,7 +66,7 @@
 											<img src="./images/dhruthiD.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
-												<p style = "font: 2em; color: white;">Dhruti Deshpande</p> 
+												<p style = "font: 2em white;">Dhruti Deshpande</p> 
 											</p>
 										</div>
 									</a>
