--- a/credits.html
+++ b/credits.html
@@ -20,34 +20,27 @@
             <header id="header">
                 <h1 id="logo"><a href="index.html">RNPSMUN 2022</a></h1>
                 <nav id="nav">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li>
-                            <a href="#">Committees</a>
-                            <ul>
-								<li><a href="unem.html">United Nations Emergency Meeting </a></li>
-								<li><a href="unhrc.html">United Nations Human Rights Council</a></li>
-								<li><a href="aippm.html">All India Political Parties Meet</a></li>
-								<li><a href="fcc.html">Futuristic Crisis Committee</a></li>
-								<li><a href="ipc.html">International Press Corps</a></li>
-                                <!--<li>
-                                    <a href="#">Submenu</a>
-                                    <ul>
-                                        <li><a href="#">Option 1</a></li>
-                                        <li><a href="#">Option 2</a></li>
-                                        <li><a href="#">Option 3</a></li>
-                                        <li><a href="#">Option 4</a></li>
-                                    </ul>
-                                </li> -->
-                            </ul>
-                        </li>
-                        <li><a href="eb.html">Secretariat</a></li>
-                        <li><a href="#">Delegate Handbook</a></li>
-                        <li><a href="#">Background Guides</a></li>
-                        <li><a href="contactus.html">Contact Us</a></li>
-                        <li><a href="#" class="button primary">REGISTRATION</a></li>
-                    </ul>
-                </nav>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li>
+								<a href="#">Committees</a>
+								<ul>
+									<li><a href="unem.html">UNEM </a></li>
+									<li><a href="unhrc.html">UNHRC</a></li>
+									<li><a href="aippm.html">AIPPM</a></li>
+									<li><a href="fcc.html">FCC</a></li>
+									<li><a href="ipc.html">IPC</a></li>
+								</ul>
+							</li>
+							<li><a href="eb.html">Secretariat</a></li>
+							<li><a href="credits.html">Credits</a></li>
+							<li><a href="#">Delegate Handbook</a></li>
+							<li><a href="#">Background Guides</a></li>
+							<li><a href="#">Matrix</a></li>
+							<li><a href="contactus.html">Contact Us</a></li>
+							<li><a href="#" class="button primary">REGISTRATION</a></li>
+						</ul>
+					</nav>
             </header>
 
 			<!-- Main -->
