--- a/eb.html
+++ b/eb.html
@@ -60,7 +60,7 @@
 											<img src="./images/dhruthiD.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
-												<p style = "font: 2em white;">Dhruti Deshpande</p> 
+												<p style = "font: 2em; color: white;">Dhruti Deshpande</p> 
 											</p>
 										</div>
 									</a>
@@ -72,7 +72,7 @@
 											<img src="./images/VishalRao.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
-												<p style = "font: 2em; color: white;">Vishal A Rao</p> 
+												<p style = "font: 2em perpetua; color: white;">Vishal A Rao</p> 
 											</p>
 										</div>
 									</a>
@@ -84,7 +84,7 @@
 											<img src="./images/maski.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">CRISIS DIRECTOR</h1>
-											<p style = "font: 2em; color: white;">Vishal Maski</p>
+											<p style = "font: 2em perpetua; color: white;">Vishal Maski</p>
 											</p>
 										</div>
 									</a>
@@ -96,7 +96,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em; color: white;">NAME HERE</p> 
+												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -108,7 +108,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em; color: white;">NAME HERE</p> 
+												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -120,7 +120,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em; color: white;">NAME HERE</p> 
+												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -132,7 +132,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em; color: white;">NAME HERE</p> 
+												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -144,7 +144,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em; color: white;">NAME HERE</p> 
+												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
@@ -156,7 +156,7 @@
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em; color: white;">NAME HERE</p> 
+												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
 											</p>
 										</div>
 									</a>
