--- a/eb.html
+++ b/eb.html
@@ -95,8 +95,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
+												<h1 style="font: 1em;  color:white">HEAD OF OC</h1>
+												<p style = "font: 2em perpetua; color: white;">Shambhavi A U M</p> 
 											</p>
 										</div>
 									</a>
@@ -107,8 +107,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
+												<h1 style="font: 1em;  color:white">HEAD OF OC</h1>
+												<p style = "font: 2em perpetua; color: white;">Dhruti Kediyila</p> 
 											</p>
 										</div>
 									</a>
@@ -119,8 +119,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
+												<h1 style="font: 1em;  color:white">MUN ADVISOR</h1>
+												<p style = "font: 2em perpetua; color: white;">Akash G C</p> 
 											</p>
 										</div>
 									</a>
