--- a/eb.html
+++ b/eb.html
@@ -108,7 +108,7 @@
 											<img src="./images/dhruthi.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF OC</h1>
-												<p style = "font: 2em perpetua; color: white;">Dhruti Kediyila</p> 
+												<p style = "font: 2em perpetua; color: white;">Dhruti Kedilaya</p> 
 											</p>
 										</div>
 									</a>
