--- a/eb.html
+++ b/eb.html
@@ -95,7 +95,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/shambhavi.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">HEAD OF OC</h1>
+												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
 												<p style = "font: 2em perpetua; color: white;">Shambhavi A U M</p> 
 											</p>
 										</div>
@@ -107,7 +107,7 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/dhruthi.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">HEAD OF OC</h1>
+												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
 												<p style = "font: 2em perpetua; color: white;">Dhruti Kedilaya</p> 
 											</p>
 										</div>
