--- a/eb.html
+++ b/eb.html
@@ -57,7 +57,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/dhruthiD.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/dhruthiD.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">SECRETARY GENERAL</h1>
 												<p style = "font: 2em perpetua; color: white;">Dhruti Deshpande</p> 
@@ -69,7 +69,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/VishalRao.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/VishalRao.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">DIRECTOR GENERAL</h1>
 												<p style = "font: 2em perpetua; color: white;">Vishal A Rao</p> 
@@ -81,7 +81,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/maski.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/maski.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 											<h1 style="font: 1em;  color:white">CRISIS DIRECTOR</h1>
 											<p style = "font: 2em perpetua; color: white;">Vishal Maski</p>
@@ -93,7 +93,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/shambhavi.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/shambhavi.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
 												<p style = "font: 2em perpetua; color: white;">Shambhavi A U M</p> 
@@ -105,7 +105,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/dhruthi.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/dhruthi.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">HEAD OF ORGANISING COMMITTEE</h1>
 												<p style = "font: 2em perpetua; color: white;">Dhruti Kedilaya</p> 
@@ -117,7 +117,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/akash.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/akash.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em;  color:white">MUN ADVISOR</h1>
 												<p style = "font: 2em perpetua; color: white;">Akash G C</p> 
@@ -129,39 +129,16 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/ara.jpeg" style="height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
+												<h1 style="font: 1em;  color:white">HEAD OF TECH</h1>
+												<p style = "font: 2em perpetua; color: white;">Aravind Sreenath</p> 
 											</p>
 										</div>
 									</a>
 		
 								</article>
-								<article>
-									<a >
-										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
-											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
-											</p>
-										</div>
-									</a>
-		
-								</article>
-								<article>
-									<a >
-										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
-											<p>
-												<h1 style="font: 1em;  color:white">POSITION</h1>
-												<p style = "font: 2em perpetua; color: white;">NAME HERE</p> 
-											</p>
-										</div>
-									</a>
-		
-								</article>
+								
 								
 							</section>
 
