--- a/aippm.html
+++ b/aippm.html
@@ -62,12 +62,16 @@
 						<b>-Bernard Baruch.</b>
 					</p>
 					<p style="font-size: 1.15em">
-						The first committee of the General Assembly, DISEC, presides over topics
-relating to international security and disarmament.
-This year's agenda is one of great interest and urgency.
-The goal of the committee is to dive deeper into the militarization of viruses and the like, as
-well as address the situation around the 2019-21 pandemic caused by the Covid 19 virus
-originating in China.
+						The driving force behind the glory of the nation we call Bharat is an idea. An idea that has existed for
+thousands of years, allowing countless people to live the way they see fit, without fear.
+That idea, is tolerance.
+But as the years have passed and the patience of our people has run dry, a dark cloud looms over the future
+of this country.
+So RNPS MUN calls out to you, delegates, to answer the burning questions:
+Is our nation truly tolerant of all religions? Can we confidently say that we, as a country, accept all people
+as they are irrespective of their faiths and beliefs?
+And above all, how are we to progress as a nation amidst this environment of animosity and prejudice?
+
 					</p>
 									
 					<header class="major">
