--- a/fcc.html
+++ b/fcc.html
@@ -63,8 +63,12 @@
 						<b>-Bernard Baruch.</b>
 					</p>
 					<p style="font: 1.15em perpetua">
-						A committee consisting of the most substantial powers in the past decade come together in 2035 to address the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need to put aside their post-war differences after a decade of global political unrest, will the countries find the strength to unite when faced with the consequences of the dark side of science, privatization of government and the growing influence of private individuals on politics?
-					</p>
+						A committee consisting of the most substantial powers in the past decade come together in 2035 to address
+the anonymous message that threatens to release a potent bioweapon upon the world. With an urgent need
+to put aside their post-war differences after a decade of global political unrest, will the countries find the
+strength to unite when faced with the consequences of the dark side of science, privatization of government
+and the growing influence of private individuals on politics?
+</p>
 					<header class="major">
 						</header>
 									<h3 class="major">AGENDA</h3>
