--- a/unhrc.html
+++ b/unhrc.html
@@ -62,8 +62,12 @@
 						<b>-Bernard Baruch.</b>
 					</p>
 					<p style="font-size: 1.15em">
-						" a privileged man's ignorance, is marginalized man's grave" Injustice, poverty , social and cultural boycott, lack of opportunities and non-dominant social identities, THESE are the several problems marginalized communities face. The UN HRC of NPS rnr will be focusing on how to resolve the problems addressed and aims to create an equitable, just and sustainable society. "Marginalized communities are those that are excluded from mainstream social, economical, educational and cultural life" the marginalized communities that are going to be included:- LGBTQI+ community , migrants and refugees, women and girls , ethnic minorities.
-					</p>
+						"A privileged man's ignorance, is marginalized man's grave." Injustice, poverty, social and cultural boycott,
+lack of opportunities and non-dominant social identities; these are the several problems marginalized
+communities like the LGBTQI+ community, migrants and refugees, women and girls, ethnic minorities
+face. The UNHRC will be focusing on how to resolve these problems, and it aims to help create an
+equitable, just and sustainable society
+</p>
 					<header class="major">
 						</header>
 					<h3 class="major">AGENDA</h3>
