--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
 							<header class="major">
 								<h2>The Schedule</h2>
 								<p>Here's what you will be doing</p>
+								<p>Reportiing time: 8:15 am</p>
 							</header>
 	
 							<!-- Content -->
@@ -373,27 +374,27 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>10:00 am - 10:45 am</td>
+												<td>8:45 am - 9:15 am</td>
 												<td>Opening Ceremony</td>
 											</tr>
 											<tr>
-												<td>11:00 am - 1:00 pm</td>
+												<td>9:30 am - 11:00 am</td>
 												<td>Session 1</td>
 											</tr>
 											<tr>
-												<td>1:00 pm - 1:30 pm</td>
+												<td>11:00 am - 11:15 am</td>
 												<td>Break</td>
 											</tr>
 											<tr>
-												<td> 1:30 pm - 3:30 pm</td>
+												<td> 11:15 am - 1:00 pm</td>
 												<td>Session 2</td>
 											</tr>
 											<tr>
-												<td> 3:30 pm - 3:45 pm</td>
-												<td>Break</td>
+												<td> 1:00 pm - 1:30 pm</td>
+												<td>Lunch</td>
 											</tr>
 											<tr>
-												<td> 3:45 pm - 5:00 pm</td>
+												<td> 1:30 pm - 3:00 pm</td>
 												<td>Session 3</td>
 											</tr>
 										</tbody>
@@ -408,28 +409,24 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>10:00 am - 10:45 am</td>
-												<td>Opening Ceremony</td>
+												<td>8:30 am - 10:30 am</td>
+												<td>Session 4</td>
 											</tr>
 											<tr>
-												<td>11:00 am - 1:00 pm</td>
-												<td>Session 1</td>
-											</tr>
-											<tr>
-												<td>1:00 pm - 1:30 pm</td>
+												<td>10:30 am - 10:45 am</td>
 												<td>Break</td>
 											</tr>
 											<tr>
-												<td> 1:30 pm - 3:30 pm</td>
-												<td>Session 2</td>
+												<td>10:45 am - 1:00 pm</td>
+												<td>Session 5</td>
 											</tr>
 											<tr>
-												<td> 3:30 pm - 3:45 pm</td>
-												<td>Break</td>
+												<td> 1:00 pm - 1:30 pm</td>
+												<td>Lunch</td>
 											</tr>
 											<tr>
-												<td> 3:45 pm - 5:00 pm</td>
-												<td>Session 3</td>
+												<td> 1:30 pm - 3:00 pm</td>
+												<td>Session 6</td>
 											</tr>
 										</tbody>
 									</table><br><br>
@@ -443,28 +440,24 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>10:00 am - 10:45 am</td>
-												<td>Opening Ceremony</td>
+												<td>8:30 am - 10:30 am</td>
+												<td>Session 7</td>
 											</tr>
 											<tr>
-												<td>11:00 am - 1:00 pm</td>
-												<td>Session 1</td>
-											</tr>
-											<tr>
-												<td>1:00 pm - 1:30 pm</td>
+												<td>10:30 am - 10:45 am</td>
 												<td>Break</td>
 											</tr>
 											<tr>
-												<td> 1:30 pm - 3:30 pm</td>
-												<td>Session 2</td>
+												<td>10:45 am - 1:00 pm</td>
+												<td>Session 8</td>
 											</tr>
 											<tr>
-												<td> 3:30 pm - 3:45 pm</td>
-												<td>Break</td>
+												<td> 1:00 pm - 2:00 pm</td>
+												<td>Lunch</td>
 											</tr>
 											<tr>
-												<td> 3:45 pm - 5:00 pm</td>
-												<td>Session 3</td>
+												<td> 2:00 pm - 3:00 pm</td>
+												<td>Closing Ceremony</td>
 											</tr>
 										</tbody>
 									</table>
