--- a/aippm.html
+++ b/aippm.html
@@ -79,7 +79,7 @@ And above all, how are we to progress as a nation amidst this environment of ani
 					<h3 class="major">AGENDA</h3>
 
 					<p style="font-weight: bold; text-align: center; font-size: 1.5em">
-						Communal Intolerance 
+						Communal Intolerance With Special Reference To Religious And Political Intolerance
 					</p>
 
 								</div>
