--- a/credits.html
+++ b/credits.html
@@ -59,8 +59,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<h1 style="font: 1em sans-serif;  color:white">HEAD OF TECH</h1>
+												<p style = "font: 2em perpetua; color: white;">Aravind Sreenath</p> 
 											</p>
 										</div>
 									</a>
@@ -71,8 +71,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
+												<p style = "font: 2em perpetua; color: white;">Tarun K</p> 
 											</p>
 										</div>
 									</a>
@@ -83,8 +83,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
+												<p style = "font: 2em perpetua; color: white;">Anirudh M</p> 
 											</p>
 										</div>
 									</a>
@@ -95,8 +95,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
+												<p style = "font: 2em perpetua; color: white;">Parth K Dubal</p> 
 											</p>
 										</div>
 									</a>
@@ -107,8 +107,8 @@
 										<div style="border-radius: 100%; text-align: center; size: 50%">
 											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
-												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
-												<p>NAME HERE</p> 
+												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
+												<p style = "font: 2em perpetua; color: white;">Yash Aanand</p> 
 											</p>
 										</div>
 									</a>
