--- a/credits.html
+++ b/credits.html
@@ -105,7 +105,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/yashA.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
 												<p style = "font: 2em perpetua; color: white;">Yash Aanand</p> 
