--- a/credits.html
+++ b/credits.html
@@ -69,7 +69,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/tarunK.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
 												<p style = "font: 2em perpetua; color: white;">Tarun K</p> 
@@ -93,7 +93,7 @@
 								<article>
 									<a >
 										<div style="border-radius: 100%; text-align: center; size: 50%">
-											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<img src="./images/parthK.jpeg" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
 											<p>
 												<h1 style="font: 1em sans-serif;  color:white">TECH TEAM</h1>
 												<p style = "font: 2em perpetua; color: white;">Parth K Dubal</p> 
